# awesome-databricks-mcp

./: .gitignore  CLAUDE.md  Makefile  README.md  REFACTORING_RECOMMENDATIONS.md  databricks-mcp-launcher.sh  pyproject.toml  pytest.ini  requirements.txt  run-mcp-proxy.sh  run_tests.sh
.claude/: settings.json  statusline-databricks-mcp.sh
.claude/commands/: setup-mcp.md
.cursor/rules/: backend-development.mdc  code-quality.mdc  databricks-integration.mdc  deployment-devops.mdc  development-workflow.mdc  frontend-development.mdc  mcp-development.mdc  performance-optimization.mdc  project-overview.mdc  security-and-accessibility.mdc  testing-guidelines.mdc
.github/workflows/: ci.yml  deploy-test.yml  deploy.yml  security.yml  test.yml
claude_scripts/: README.md  inspect_lakeview_api.py  test_dashboard_tools.py  test_mcp_tools.py  test_remote_mcp_curl.sh  test_remote_mcp_proxy.sh  test_uc_tools.py
client/: .eslintrc.cjs  .eslintrc.json  package-lock.json
client/src/fastapi_client/services/: ApiService.ts
client/src/pages/: PromptsPage.tsx  WelcomePage.tsx
dba_mcp_proxy/: README.md  mcp_client.py
docs/: README.md  api-reference.md  architecture.md  core-tools.md  databricks_sdk_tools.md  getting-started.md  testing.md  unity_catalog_tools.md
docs/databricks_apis/: README.md
docs/lakeview_json_schemas/: complete_widget_schemas.json  lakeview_widget_schemas.json  master_lakeview_schemas.json  widget_spec_schemas.json
examples/: README.md  create_monitoring_dashboard.py  create_sales_dashboard.py  update_existing_dashboard.py
prompts/: build_dlt_pipeline.md  build_lakeview_dashboard.md  build_ldp_pipeline.md  deploy_execute_dlt_pipeline.md  performance_optimization.md
server/: app.py  prompts.py  tools.py
server/models/: __init__.py  widget_types.py
server/routers/: __init__.py
server/services/: user_preferences.py
server/tools/: __init__.py  core.py  dashboards.py  data_management.py  governance.py  jobs_pipelines.py  lakeview_dashboard.py  layout_optimization.py  repositories.py  sql_operations.py  unity_catalog.py  utils.py  widget_specs.py  widgets.py  workspace_files.py
tests/: DEPLOYMENT_VALIDATION.md  README.md  __init__.py  conftest.py  mock_factory.py  run_deployment_tests.sh  run_tests.py  test_core.py  test_dashboard_builder.py  test_dashboards.py  test_data_management.py  test_deployment.py  test_governance.py  test_integration.py  test_jobs_pipelines.py  test_mcp_protocol.py  test_performance.py  test_performance_comprehensive.py  test_security.py  test_sql_operations.py  test_tools.py  test_unity_catalog.py  test_utils.py  test_widgets.py  utils.py
tests/fixtures/: mock_responses.json
tests/integration/: __init__.py  test_mcp_server_integration.py  test_services_integration.py
tests/unit/: __init__.py  test_app.py  test_mcp_proxy.py
tests/unit/routers/: __init__.py  test_mcp_info.py  test_prompts.py  test_router_init.py  test_user.py
tests/unit/tools/: test_core.py  test_dashboards.py  test_sql_operations.py  test_tools_loading.py  test_unity_catalog.py
