[project]
name = "databricks-app-template"
version = "0.1.0"
description = "Modern Databricks App Template - FastAPI backend with React TypeScript frontend"
authors = [
    {name = "Your Name", email = "your.email@databricks.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "databricks-sdk==0.59.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pandas>=2.1.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "click>=8.1.0",
    "databricks-connect>=16.1.6", # Latest version compatible with Python 3.11
    "mlflow[databricks]>=3.1.1",
    "debugpy>=1.8.15",
    "fastapi-mcp>=0.3.7",
    "fastmcp",
    "mcp>=1.12.0",
    "pyyaml>=6.0.2",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "ty>=0.0.1a14",  # Type checker for development only
    "watchdog>=3.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.25.0",
    "coverage>=7.3.0",
    "bandit[toml]>=1.7.5",
    "safety>=2.3.0",
]

[project.scripts]
hello-world = "claude_scripts.hello_world:main"
dba-mcp-proxy = "dba_mcp_proxy.mcp_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "claude_scripts", "scripts", "dba_mcp_proxy"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    # "--cov=server",
    # "--cov=dba_mcp_proxy",
    # "--cov-report=term-missing",
    # "--cov-report=html:coverage_html",
    # "--cov-fail-under=50",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that interact with external services",
    "auth: Tests requiring authentication",
    "mcp: Tests for MCP server functionality", 
    "tools: Tests for tool functions",
    "api: Tests for FastAPI endpoints",
    "proxy: Tests for MCP proxy functionality",
    "services: Tests for service layer",
    "environment: Tests for environment configuration",
    "prompts: Tests for prompts system",
    "logging: Tests for logging functionality",
    "performance: Performance and benchmark tests",
    "deployment: Tests for deployment scenarios",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:databricks.*",
    "ignore::UserWarning:fastmcp.*",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["server", "dba_mcp_proxy"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/node_modules/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py311"
fix = true

exclude = [
    "__pycache__",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "client",
    "coverage_html",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
ignore = [
    "D105", # Missing docstring in magic method.
    "D106", # Missing docstring in a public nested class.
    "D107", # Missing docstring in __init__.
    "D203", # 1 blank line required before class docstring.
    "D204", # 1 blank line required after class docstring.
    "D213", # Multi-line docstring summary should start at the second line.
    "D401", # First line of docstring should be in imperative mood: "{first_line}"
    "D407", # Missing dashed underline after section.
]
select = ["E", "W", "F", "Q", "I", "D"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["D101", "D102", "D103", "D104"]
"test_*.py" = ["D101", "D102", "D103", "D104"]
"tests/*" = ["D101", "D102", "D103", "D104"]
"__init__.py" = ["D104"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["tests", "client/node_modules", "venv"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[dependency-groups]
dev = [
    "tomli>=2.2.1",
]